fix: fix xl screen size and overflow of countdown titles

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -2,7 +2,7 @@ $screen-xs: 280px;
 $screen-sm: 368px;
 $screen-md: 560px;
 $screen-lg: 752px;
-$screen-xl: 1200px;
+$screen-xl: 1600px;
 
 $color-grayish-blue: hsl(237, 18%, 59%);
 $color-soft-red: hsl(345, 95%, 68%);
