--- a/src/assets/styles/components/_countdown.scss
+++ b/src/assets/styles/components/_countdown.scss
@@ -15,27 +15,45 @@
     }
 
     &__unit {
+        position: relative;
         text-align: center;
-        margin-bottom: 0.8rem;
+        margin-bottom: 4rem;
 
         @media screen and (min-width: variables.$screen-xs) {
-            margin-bottom: 0;
+            margin-bottom: 1.9rem;
+        }
+
+        @media screen and (min-width: variables.$screen-lg) {
+            margin-bottom: 3.4rem;
         }
     }
 
     &__title {
+        position: absolute;
+        bottom: -1.2rem;
+        left: 50%;
+        transform: translate(-50%, 100%);
         text-align: center;
         font-size: 0.7rem;
         font-weight: 700;
-        line-height: 1.2rem;
+        line-height: 0.7rem;
         text-transform: uppercase;
         color: variables.$color-grayish-blue;
         letter-spacing: 0.3rem;
         margin-top: 0.8rem;
 
+        @media screen and (min-width: variables.$screen-md) {
+            font-size: 1rem;
+            letter-spacing: 0.45rem;
+            line-height: 1rem;
+            margin-top: 1.6rem;
+        }
+
         @media screen and (min-width: variables.$screen-lg) {
+            bottom: -2rem;
             font-size: 1.4rem;
             letter-spacing: 0.6rem;
+            line-height: 1.4rem;
             margin-top: 1.6rem;
         }
     }
